<resources>
    <string name="app_name">Shared_shopping_list</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">EMAIL</string>
    <string name="welcome">WELCOME</string>
    <string name="new_list">NEW LIST</string>
    <string name="see_my_lists">MY LISTS</string>
    <string name="share_list">Share list:</string>
    <string name="naslov">NASLOV</string>
    <string name="ok">OK</string>
    <string name="naslov_liste">Naslov liste</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">SAVE</string>
    <string name="Naslov">Naslov</string>
    <string name="shared">Shared</string>
    <string name="see_shared_lists">SHR LISTS</string>
    <string name="refresh">REFRESH</string>
    <string name="home">HOME</string>
    <string name="BASE_IP">http://192.168.1.5</string>
</resources>