<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginFragment"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    android:id="@+id/linear_layout_2"
    >

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/username"
        android:id="@+id/username_1"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password_1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:id="@+id/login_2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/home_button1"
        />
</LinearLayout>

