<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/user_txt"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <Button
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/new_list"
           android:layout_weight="1"
           android:backgroundTint="@color/white"
           android:textColor="@color/black"
           android:id="@+id/new_list"
           />
       <Button
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/see_my_lists"
           android:layout_weight="1"
           android:backgroundTint="@color/white"
           android:textColor="@color/black"
           android:enabled="false"
           android:id="@+id/see_lists"
           />
   </LinearLayout>

   <ListView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/lists"
       />

</LinearLayout>